Add db context along with necessary and add migrations.

--- a/VesperaWebApp/appsettings.Development.json
+++ b/VesperaWebApp/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=VesperaWebAppDb;Integrated Security=True;Encrypt=False;"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
